--- a/app/templates/components/test-reporter.hbs
+++ b/app/templates/components/test-reporter.hbs
@@ -1,8 +1,8 @@
 {{progress-indicator class="progress-wrap progress"
-  passed=3
-  failed=0
-  total=10
-  time="323 ms"
+  passed=passed
+  failed=failed
+  total=total
+  time=elapsed
 }}
 
 <div class="reporter">
@@ -16,7 +16,7 @@
 
 {{layout-chooser currentLayout=currentLayout selectCurrentLayout=(action 'selectCurrentLayout')}}
 
-<iframe src=""></iframe>
+<iframe src="http://localhost:4201/tests"></iframe>
 
 
 {{!--Could even be a hosted app?--}}
