--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -30,6 +30,10 @@
     padding: 0;
   }
 
+  .reporter h2, .reporter h4 {
+    line-height: 1.5;
+  }
+
   iframe {
     width: 50%;
     position: absolute;
@@ -174,6 +178,10 @@
     height: calc(50% - 1rem);
     top: calc(50% + 1rem);
     left: 0;
+  }
+
+  .not-run {
+    color: lightgray;
   }
 </style>
 {{test-reporter}}
