--- a/app/templates/components/test-reporter.hbs
+++ b/app/templates/components/test-reporter.hbs
@@ -17,7 +17,4 @@
 
 {{layout-chooser currentLayout=currentLayout selectCurrentLayout=(action 'selectCurrentLayout')}}
 
-<iframe src="http://localhost:4200/tests"></iframe>
-
-
-{{!--Could even be a hosted app?--}}
+<iframe src="http://localhost:4200/tests?module=Acceptance%3A%20Index"></iframe>
