--- a/app/templates/components/test-results.hbs
+++ b/app/templates/components/test-results.hbs
@@ -5,9 +5,11 @@
 </h4>
 
 {{#if isExpanded}}
-  <ul class="results-assertions">
+  <ol class="results-assertions">
     {{#each test.assertions as |assertion|}}
-      <li class="assertion">{{assertion.message}}</li>
+      <li class="assertion {{if assertion.result 'passed' 'failed'}}">
+        {{assertion-results assertion=assertion}}
+      </li>
     {{/each}}
-  </ul>
+  </ol>
 {{/if}}
