--- a/app/templates/components/test-reporter.hbs
+++ b/app/templates/components/test-reporter.hbs
@@ -17,4 +17,4 @@
 
 {{layout-chooser currentLayout=currentLayout selectCurrentLayout=(action 'selectCurrentLayout')}}
 
-<iframe class="tests-window" src="http://localhost:4200/tests?module=Acceptance%3A%20Index"></iframe>
+<iframe class="tests-window" src="http://localhost:4200/tests"></iframe>
