--- a/app/templates/components/test-reporter.hbs
+++ b/app/templates/components/test-reporter.hbs
@@ -9,7 +9,10 @@
 <div class="reporter">
   <input type="text" class="filter-tests" placeholder="Filter tests">
   <ol class="results">
-    {{#each modules as |mod|}}
+    {{#each failedModules as |mod|}}
+      {{module-results mod=mod}}
+    {{/each}}
+    {{#each passedOrNotRunModules as |mod|}}
       {{module-results mod=mod }}
     {{/each}}
   </ol>
