--- a/app/templates/components/test-reporter.hbs
+++ b/app/templates/components/test-reporter.hbs
@@ -28,4 +28,4 @@
 
 {{layout-chooser currentLayout=currentLayout selectCurrentLayout=(action 'selectCurrentLayout')}}
 
-<iframe class="tests-window" src="http://localhost:4200/tests"></iframe>
+<iframe class="tests-window" src="{{testRunnerUrl}}"></iframe>
