--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -61,7 +61,10 @@
     left: 0;
     position: absolute;
     top: 0;
-    padding: .5rem;
+  }
+
+  .progress-wrap .progress-bar h4 {
+    margin: 0.5rem;
   }
 
   .progress-wrap .progress-bar.failed {
